# innerstat

./: .gitignore  CMakeLists.txt  README.md
Agent/: test.cpp
Client/: Area.cpp  Area.h  Canvas.cpp  Canvas.h  Connection.cpp  Connection.h  DialogManager.cpp  DialogManager.h  MainAPP.cpp  MainFrame.h  Node.cpp  Node.h  Port.cpp  Port.h  Shape.cpp  Shape.h
HighPerformanceApp/: .gitignore  AppMain.cpp  CpuLoadPanel.cpp  DiskLoadPanel.cpp  MainFrame.cpp  MainFrame.h  MemoryLoadPanel.cpp
docs/: InnerStat.mdj
include/innerstat/agent/: check_sudo.h  command_execute.h  elevation.h  mac_address.h  single_instance_guard.h  system_load_info.h
include/innerstat/client/: AddShapeDialog.h  AgentSelectionDialog.h  MainFrame.h  PropertyDialog.h  agent_dialog.h  agent_mqtt_connection.h  area.h  base.h  canvas.h  client.h  color_manager.h  connection.h  dialog.h  enum_list.h  main_frame.h  no_sash_splitter.h  node.h  port.h  shape.h  shape_connection.h
include/innerstat/common/: json_util.h  system_info.h
include/innerstat/slapp/: cpu.h  disk.h  main.h  memory.h  slapp.h
src/agent/: agent.cpp  elevation.cpp  test.cpp
src/client/: AddShapeDialog.cpp  AgentSelectionDialog.cpp  PropertyDialog.cpp  agent_dialog.cpp  agent_mqtt_connection.cpp  area.cpp  canvas.cpp  client.cpp  connection.cpp  dialog.cpp  main_frame.cpp  node.cpp  port.cpp  shape.cpp  shape_connection.cpp
src/slapp/: CpuLoadPanel.cpp  DiskLoadPanel.cpp  MainFrame.cpp  MemoryLoadPanel.cpp  slapp.cpp
